Cleanup JDK 17 compiler warnings in source and test.